--- a/.github/workflows/cronjob.yml
+++ b/.github/workflows/cronjob.yml
@@ -1,16 +1,15 @@
-name: Deploy Discord GFIPulse
+name: Run Discord Bot
 
 on:
-  push:
-    branches:
-      - main
+  schedule:
+    - cron: "0 */12 * * *" # run every 12 hours
 
 jobs:
-  deploy:
+  run_bot:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v2
 
       - name: Set up Node.js
