--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -24,5 +24,5 @@ jobs:
       - name: Run TypeScript compilation
         run: npm run build
 
-      - name: Run tests
+      - name: Run unit tests
         run: npm test
