--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "gfipulse",
-  "version": "1.0.0-alpha",
+  "version": "1.0.0",
   "description": "Good First Issue Pulse - Discord bot that automatically alerts you of open source Issues that need help fixing",
   "main": "index.js",
   "scripts": {
     "start": "ts-node src/bot.ts",
     "build": "tsc",
-    "prod": "node dist/bot.js"
+    "prod": "node dist/bot.js",
+    "test": "jest"
   },
   "keywords": [
     "github",
@@ -23,5 +24,11 @@
     "discord.js": "^14.16.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.14",
+    "jest": "^29.7.0",
+    "nock": "^13.5.5",
+    "ts-jest": "^29.2.5"
   }
 }
