added minor cleanup

--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "Good First Issue Pulse - Discord bot that automatically alerts you of open source Issues that need help fixing",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src/bot.ts",
+    "start": "run-bot.sh",
     "build": "tsc",
-    "prod": "node dist/bot.js",
     "test": "jest"
   },
   "keywords": [
