fix chmod permit

--- a/.github/workflows/cronjob.yml
+++ b/.github/workflows/cronjob.yml
@@ -23,6 +23,9 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Set execute permissions for run-bot.sh
+        run: chmod +x ./run-bot.sh
+
       - name: Run bot
         env:
           DISCORD_TOKEN: ${{ secrets.DISCORD_TOKEN }}
