--- a/.github/workflows/cronjob.yml
+++ b/.github/workflows/cronjob.yml
@@ -12,6 +12,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      # Set the remote origin to include GH_TOKEN immediately after checkout
+      - name: Set up push access with GH_TOKEN
+        run: |
+          git remote set-url origin https://${{ secrets.GH_TOKEN }}@github.com/VictorDoyle/GFIPulse.git
+
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
@@ -34,8 +39,6 @@ jobs:
               git config --local user.email "action@github.com"
               git add data/fetchedissues.json
               git commit -m "Update fetched issues from cron job"
-              # Set the remote URL to include GH_TOKEN for authentication
-              git remote set-url origin https://${{ secrets.GH_TOKEN }}@github.com/VictorDoyle/GFIPulse.git
               git push origin HEAD:main
             else
               echo "No changes to commit."
