--- a/.github/workflows/cronjob.yml
+++ b/.github/workflows/cronjob.yml
@@ -7,10 +7,14 @@ on:
 jobs:
   run_bot:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.ACTIONS_PUSH_TOKEN }}
 
       - name: Set up Node.js
         uses: actions/setup-node@v2
@@ -24,19 +28,33 @@ jobs:
         env:
           DISCORD_TOKEN: ${{ secrets.DISCORD_TOKEN }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          ACTIONS_PUSH_TOKEN: ${{ secrets.ACTIONS_PUSH_TOKEN }}
           CHANNEL_ID: ${{ secrets.CHANNEL_ID }}
         run: |
-          # Run the bot and capture the output
           npm start
-          # Check if the bot ran successfully and if the file has changed
+
           if [ $? -eq 0 ]; then
-            if [ -n "$(git status --porcelain data/fetchedissues.json)" ]; then
-              echo "Changes detected. Committing updates..."
+            echo "Checking for changes in fetchedissues.json..."
+
+            git status data/fetchedissues.json | grep 'modified:' > /dev/null
+            if [ $? -eq 0 ]; then
+              echo "Changes detected in fetchedissues.json. Committing updates..."
               git config --local user.name "github-actions"
               git config --local user.email "action@github.com"
               git add data/fetchedissues.json
               git commit -m "Update fetched issues from cron job"
-              git push
+
+              for i in {1..3}; do
+                echo "Attempt $i to push changes..."
+                if git push https://${{ secrets.ACTIONS_PUSH_TOKEN }}@github.com/VictorDoyle/GFIPulse.git HEAD:main; then
+                  echo "Push successful!"
+                  break
+                else
+                  echo "Push failed, retrying..."
+                  git fetch origin main
+                  git rebase origin/main
+                fi
+              done
             else
               echo "No changes to commit."
             fi
