--- a/.github/workflows/cronjob.yml
+++ b/.github/workflows/cronjob.yml
@@ -3,7 +3,7 @@ name: Run Discord Bot
 on:
   schedule:
     - cron: "0 */24 * * *" # run every 24 hours
-  workflow_dispatch:  # keep for debugging
+  workflow_dispatch: # keep for debugging
 
 jobs:
   run_bot:
@@ -37,11 +37,6 @@ jobs:
           if [ $? -eq 0 ]; then
             echo "Checking for changes in fetchedissues.json..."
 
-            if [[ ! -f data/fetchedissues.json ]]; then
-              echo "fetchedissues.json does not exist."
-              exit 1
-            fi
-
             git status data/fetchedissues.json | grep 'modified:' > /dev/null
             if [ $? -eq 0 ]; then
               echo "Changes detected in fetchedissues.json. Committing updates..."
@@ -49,18 +44,7 @@ jobs:
               git config --local user.email "action@github.com"
               git add data/fetchedissues.json
               git commit -m "Update fetched issues from cron job"
-
-              for i in {1..3}; do
-                echo "Attempt $i to push changes..."
-                if git push https://${{ secrets.ACTIONS_PUSH_TOKEN }}@github.com/VictorDoyle/GFIPulse.git HEAD:main; then
-                  echo "Push successful!"
-                  break
-                else
-                  echo "Push failed, retrying..."
-                  git fetch origin main
-                  git rebase origin/main
-                fi
-              done
+              git push origin main
             else
               echo "No changes to commit."
             fi
