--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.7.7",
     "discord.js": "^14.16.3",
     "dotenv": "^16.4.5",
+    "redis": "^4.7.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   },
